NEXT-259 - Implement customer listing (W.I.P.)

--- a/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.less
@@ -1,7 +1,7 @@
 @import "~less/variables";
 
-@sw-grid-row-color-border:     @color-shopware-blue;
-@sw-grid-row-color-background: @color-cadet-blue;
+@sw-grid-row-color-border:                @color-shopware-blue;
+@sw-grid-row-color-background:            @color-cadet-blue;
 @sw-grid-item-color-border:               @color-steam-cloud;
 @sw-grid-item-color-background:           @color-light-gray;
 @sw-grid-item-even-color-background:      @color-white;
@@ -55,7 +55,7 @@
             justify-content: stretch;
             height: 100%;
             line-height: 24px;
-            padding: 20px 20px;
+            padding: 10px;
             text-align: center;
         }
 
