--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.less
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.less
@@ -4,9 +4,11 @@
 @sw-customer-list-color-success: @color-emerald;
 
 .sw-customer-list {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    .sw-customer-list__content {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
 
     .is--inactive {
         color: @sw-customer-list-color-error;
