--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.less
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.less
@@ -3,10 +3,12 @@
 @sw-product-list-color-error:      @color-crimson;
 @sw-product-list-color-success:    @color-emerald;
 
-.sw-product--list {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+.sw-product-list {
+    .sw-product-list__content {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
 
     .is--inactive {
         color: @sw-product-list-color-error;
