--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -104,6 +104,7 @@
         border: 1px solid @sw-field-color-border;
         background: @sw-field-color-background;
         font-size: @sw-field-font-size;
+        font-family: @sw-field-font-family;
         line-height: 27px;
         transition: @sw-field-transition;
         color: @sw-field-color-text;
@@ -164,6 +165,7 @@
             height: 100%;
             padding: 8px 16px;
             font-size: @sw-field-font-size;
+            font-family: @sw-field-font-family;
             line-height: 27px;
             color: @sw-field-color-text;
             border-radius: @sw-field-border-radius;
