--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -1,6 +1,6 @@
 {% block sw_customer_base_form %}
     <div class="sw-customer-base-form">
-        <sw-container grid="1fr 1fr" gap="30px">
+        <sw-container grid="1fr 1fr" gap="0px 30px">
             {% block sw_customer_base_form_first_salutation_field %}
                 <sw-field type="text"
                           :label="$tc('sw-customer.baseForm.labelSalutation')"
