--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -19,7 +19,7 @@
             </sw-field>
         {% endblock %}
 
-        <sw-container grid="1fr 1fr" gap="30px">
+        <sw-container grid="1fr 1fr" gap="0px 30px">
             {% block sw_product_basic_form_id_field %}
                 <sw-field type="text"
                           :label="$tc('sw-product.basicForm.labelProductNumber')"
