--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -15,6 +15,13 @@
 @color-link-water:               #FCFCFC;
 @color-light-gray:               #F4F7FA;
 
+// Module colors
+@color-product:                 #57D9A3;
+@color-category:                #fe87bf;
+@color-customer:                #f88962;
+@color-page:                    #8379c7;
+@color-media:                   #ef734a;
+
 // Gradients
 @color-gradient-dark-gray-start: #303A4F;
 @color-gradient-dark-gray-end:   #2A3345;
