--- a/Resources/administration/src/app/component/base/sw-button/sw-button.html.twig
+++ b/Resources/administration/src/app/component/base/sw-button/sw-button.html.twig
@@ -4,7 +4,11 @@
                      :to="{ 'name': link }"
                      class="sw-button"
                      :class="buttonClasses">
-            <slot>{% block sw_button_link_slot_default %}{% endblock %}</slot>
+            {% block sw_button_link_content %}
+                <span class="sw-button__content">
+                    <slot>{% block sw_button_link_slot_default %}{% endblock %}</slot>
+                </span>
+            {% endblock %}
         </router-link>
     {% endblock %}
 
@@ -14,7 +18,11 @@
                 :disabled="disabled"
                 v-on="$listeners"
                 v-else>
-            <slot>{% block sw_button_button_slot_default %}{% endblock %}</slot>
+            {% block sw_button_button_content %}
+                <span class="sw-button__content">
+                    <slot>{% block sw_button_button_slot_default %}{% endblock %}</slot>
+                </span>
+            {% endblock %}
         </button>
     {% endblock %}
 {% endblock %}
