NEXT-260 - Add edit customer page - first prototype

--- a/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
+++ b/Resources/administration/src/app/component/base/sw-avatar/sw-avatar.html.twig
@@ -1,3 +1,5 @@
 {% block sw_avatar %}
-    <span class="sw-avatar" role="img" :style="[avatarImage, avatarSize]"></span>
+    <span class="sw-avatar" role="img" :style="[avatarImage, avatarSize]">
+        <span class="sw-avatar__initials" v-if="!isLoading">{{ userInitials }}</span>
+    </span>
 {% endblock %}
