--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -166,8 +166,12 @@
                                                 {% block sw_customer_list_grid_columns_actions_context_button %}
                                                     <sw-context-button>
                                                         {% block sw_customer_list_grid_columns_actions_edit %}
-                                                            <sw-context-menu-item icon="small-pencil-paper" :disabled="true">
-                                                                {{ $tc('sw-customer.list.contextMenuEdit') }}
+                                                            <sw-context-menu-item icon="small-pencil-paper">
+                                                                <router-link :to="{
+                                                                    name: 'sw.customer.detail',
+                                                                    params: { id: item.id } }">
+                                                                    {{ $tc('sw-customer.list.contextMenuEdit') }}
+                                                                </router-link>
                                                             </sw-context-menu-item>
                                                         {% endblock %}
 
